gcc/testsuite/algol68/compile/error-string-break-6.a68
begin puts ("hello '(u0010'/) world") # { dg-error "" }  #
end
